Remove batch logic for simplicity, and used Exponential backoff wait polling rather than FSWatcher.

--- a/SyncHole.App/appsettings.json
+++ b/SyncHole.App/appsettings.json
@@ -11,6 +11,8 @@
   },
   "SyncOptions": {
     "SyncDirectory": "D:\\SyncHole",
-    "BatchSize": 3
+    "SyncFilter": "*.mp3",
+    "VaultNameFormat": "yyyy-MM-dd",
+    "IgnoreRegex": ""
   }
 }
