--- a/SyncHole.Core/SyncHole.Core.csproj
+++ b/SyncHole.Core/SyncHole.Core.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.Glacier" Version="3.3.2.63" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 
 </Project>
